--- a/src/components/Statistics/statistics.module.css
+++ b/src/components/Statistics/statistics.module.css
@@ -16,8 +16,24 @@
   margin-bottom: 20px;
 }
 
+.items {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex-basis: calc(100% / 4);
+  font-size: 18px;
+  font-weight: 700;
+  color: #000;
+}
+
 .item {
   display: flex;
   justify-content: center;
   height: 80px;
+}
+
+.percentage {
+  font-size: 24px;
 }
