--- a/src/components/FriendList/friendList.module.css
+++ b/src/components/FriendList/friendList.module.css
@@ -1,12 +1,44 @@
 .friendlist {
-  width: 400px;
+  margin: 0 auto;
+
+  padding: 0;
+}
+
+.item {
+  width: 350px;
+  height: 100px;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  gap: 10px;
-  margin: 24px auto 0 auto;
+  gap: 12px;
   border: 2px solid #325987;
-  border-radius: 16px;
+  border-radius: 6px;
   box-shadow: 2px 2px 8px #325987;
-  padding: 10px;
+  padding: 12px;
+  margin: 24px auto 0 auto;
+}
+
+.status {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background-color: rgb(233, 53, 53);
+}
+
+.isOnline {
+  background-color: rgb(52, 164, 99);
+}
+
+.avatar {
+  width: 50px;
+  height: 50px;
+}
+
+.name {
+  width: 260px;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.16;
+  letter-spacing: -0.96px;
+  text-align: center;
 }
